# gen-fmt

./: Cargo.toml  README.md
.github/workflows/: CI.yml  release.yml
include/: gen_fmt.h
queries/: genexpr.scm
src/: ffi.rs  lib.rs  main.rs
tests/: format_tests.rs
tests/expected/: all_declarations.genexpr  array_index.genexpr  block_comment.genexpr  brace_insertion.genexpr  break_continue.genexpr  default_params.genexpr  example.genexpr  for_loop.genexpr  inline_if.genexpr  logical_operators.genexpr  multiple_assignment.genexpr  number_literals.genexpr  polymorphic_ops.genexpr  require_directive.genexpr  ternary.genexpr  unary_ops.genexpr  while_loop.genexpr
tests/input/: all_declarations.genexpr  array_index.genexpr  block_comment.genexpr  brace_insertion.genexpr  break_continue.genexpr  default_params.genexpr  example.genexpr  for_loop.genexpr  inline_if.genexpr  logical_operators.genexpr  multiple_assignment.genexpr  number_literals.genexpr  polymorphic_ops.genexpr  require_directive.genexpr  ternary.genexpr  unary_ops.genexpr  while_loop.genexpr
